// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tagOpenBeginTokenizer should tokenize tag open 1`] = `
Object {
  "endIdx": 4,
  "source": "<Room",
  "startIdx": 0,
  "tag": "Room",
  "type": "TagOpenBegin",
}
`;

exports[`tagOpenEndTokenizer should tokenize non-self-closing tag close 1`] = `
Object {
  "endIdx": 0,
  "selfClosing": false,
  "source": ">",
  "startIdx": 0,
  "type": "TagOpenEnd",
}
`;

exports[`tagOpenEndTokenizer should tokenize self-closing tag close 1`] = `
Object {
  "endIdx": 1,
  "selfClosing": true,
  "source": "/>",
  "startIdx": 0,
  "type": "TagOpenEnd",
}
`;
